--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
 </head>
 
 <body>
-  <div id="screens" class="screens non-scroll">
+  <div id="screens" class="screens main non-scroll">
 
     <!-- header start -->
     <header class="screen screen-header">
@@ -356,7 +356,7 @@
             <img src="./images/steps-all-mobile.svg" alt="alt" loading="lazy" />
           </picture>
 
-          <button class="ui-btn ui-btn-colored">
+          <a class="ui-btn ui-btn-colored" href="javascript:void(0)">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
               <path d="M12.1499 16.5V18.6" stroke="white" stroke-width="1.5" stroke-linecap="round"
                 stroke-linejoin="round" />
@@ -376,7 +376,7 @@
                 stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
             Принять участие
-          </button>
+          </a>
         </div>
       </div>
       <img src="./images/gold.png" alt="ticket" class="ticket">
