--- a/src/index.html
+++ b/src/index.html
@@ -657,8 +657,14 @@
             </div>
           </div>
         </div>
-        <img src="./images/alert.svg" alt="alert" class="screen-alert">
-        <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+        <img src="./images/alert.svg" alt="alert" class="screen-alert green">
+        <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert green mobile">
+
+        <img src="./images/alert-orange.svg" alt="alert" class="screen-alert orange">
+        <img src="./images/alert-mobile-orange.svg" alt="alert" class="screen-alert orange mobile">
+
+        <img src="./images/alert-orange.svg" alt="alert" class="screen-alert brown">
+        <img src="./images/alert-mobile-orange.svg" alt="alert" class="screen-alert brown mobile">
       </div>
     </div>
 
