--- a/src/popups/popup-plane.html
+++ b/src/popups/popup-plane.html
@@ -1,4 +1,8 @@
 <div class="mfp-popup popup-plane">
+  <a class="likes" href="javascript:void(0)">
+    <span>24</span>
+    <img src="./images/lapa.svg" alt="lag">
+  </a>
   <div class="mfp-popup-inner">
     <div class="mfp-popup-title popup-plane-title">
       <div class="popup-plane-title__image">
