--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   </style>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
@@ -96,8 +96,8 @@
           <nav class="header-nav">
             <button class="burger-btn">
               <span></span>
-
             </button>
+            <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
             <ul>
               <li>
                 <a href="#">Главная</a>
@@ -163,7 +163,7 @@
         </button>
       </div>
 
-      <img src="./images/gold.png" alt="ticket" class="ticket">
+      <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
       <img src="./images/slogan.png" alt="slogan" class="screen-slogan">
       <!-- <img src="./images/gold.png" alt="ticket" class="screen-ticket"> -->
 
@@ -379,7 +379,7 @@
           </a>
         </div>
       </div>
-      <img src="./images/gold.png" alt="ticket" class="ticket">
+      <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
