--- a/public/popups/popup-plane.html
+++ b/public/popups/popup-plane.html
@@ -1,7 +1,8 @@
-<div class="mfp-popup popup-plane">
+<div class="mfp-popup popup-plane liked">
   <a class="likes" href="javascript:void(0)">
     <span>24</span>
-    <img src="./images/lapa.svg" alt="lag">
+    <img class="black" src="./images/lapa.svg" alt="lag">
+    <img class="red" src="./images/lapa-red.svg" alt="lag">
   </a>
   <div class="mfp-popup-inner">
     <div class="mfp-popup-title popup-plane-title">
