--- a/src/contest.html
+++ b/src/contest.html
@@ -36,7 +36,7 @@
   </style>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
@@ -94,8 +94,8 @@
           <nav class="header-nav">
             <button class="burger-btn">
               <span></span>
-
             </button>
+            <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
             <ul>
               <li>
                 <a href="#">Главная</a>
@@ -314,7 +314,7 @@
           </button>
         </div>
       </div>
-      <img src="./images/gold.png" alt="ticket" class="ticket">
+      <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
@@ -350,6 +350,12 @@
         <div class="screen-plans-cards">
           <div class="row">
 
+            <div class="col-md-12" style="display: none;">
+              <div class="screen-plans-cards__empty">
+                По вашему запросу <span>Игорь Потапенко</span> ничего не найдено
+              </div>
+            </div>
+
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
               <div class="screen-plans-item">
                 <a class="screen-plans-item__likes" href="javascript:void(0)">
@@ -381,7 +387,7 @@
             </div>
 
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
-              <div class="screen-plans-item">
+              <div class="screen-plans-item owner">
                 <a class="screen-plans-item__likes" href="javascript:void(0)">
                   <span>21</span>
                   <img src="./images/lapa.svg" alt="lag">
