--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
       <div class="bottle-wrapper">
         <div class="row">
           <div class="col-md-10 col-sm-8 col-xs-12">
-            <img src="./images/bottle.png" srcset="./images/bottle@2x.png" alt="bottle">
+            <img src="./images/bottle.png" srcset="./images/bottle@2x.png 2x" alt="bottle">
           </div>
         </div>
       </div>
@@ -492,10 +492,10 @@
       </div>
 
       <div class="benefits-slogan">
-        <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
+        <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
       </div>
 
-
+      <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
