--- a/public/index.html
+++ b/public/index.html
@@ -123,10 +123,13 @@
             <div class="screen-promo-left">
               <div class="promo-text">
                 <div class="h1 promo-text-title">
-                  Исследуй новое - создавай свое идеальное лето!
+                  ИССЛЕДУЙ НОВОЕ –
+                  СОЗДАВАЙ СВОИ
+                  ЯРКИЕ ОТКРЫТИЯ!
+
                 </div>
                 <p class="promo-text-question">
-                  Готов наполнить своё лето новыми впечатлениями и незабываемыми открытиями?
+                  Готов к невероятным впечатлениям, амбициозным планам и незабываемым событиям?
                 </p>
               </div>
               <button class="screen-promo-btn ui-btn benefits desktop">
@@ -591,7 +594,7 @@
             <div class="slider-content third">
               <div class="h2 slider-content-title">
                 “БЕЛЫЙ МЕДВЕДЬ”
-                <span>ЖИВОЕ</span>
+                <span>ЖИВОЙ</span>
               </div>
               <p>
                 Пивной напиток с ярко выраженным насыщенным вкусом только что сваренного пива. Обладает легким хмелевым
@@ -629,7 +632,7 @@
               </div>
             </div>
             <div class="slider-navigation">
-              <button class="arrow-btn prew disabled"></button>
+              <button class="arrow-btn prew"></button>
               <button class="arrow-btn next"></button>
             </div>
 
