--- a/src/contest.html
+++ b/src/contest.html
@@ -116,20 +116,18 @@
       <div class="container">
         <div class="contest-content">
           <div class="h3 screen-about-contest__title">
-            Поделись своими планами
-            и получи возможность
-            выиграть приз!
+            Расскажи, к каким новым открытиям ты готов и получи возможность выиграть приз от "Белого Медведя"
           </div>
           <div class="screen-about-contest__period">
             С 1 июля по 30 сентября
           </div>
           <div class="screen-about-contest__text">
             <p>
-              Каждые 2 недели будут выбираться три самых интересных и ярких плана на лето.
+              Каждые 2 недели будут выбираться три самых интересных и ярких идеи для открытия нового.
             </p>
             <p>
-              Авторы самых креативных историй получат ценные призы от бренда «Белый Медведь», которые сделают лето еще
-              более захватывающим!
+              Авторы самых креативных идей получат ценные призы от бренда «Белый Медведь», которые вдохновят на
+              воплощение идей в жизнь.
             </p>
           </div>
         </div>
@@ -323,10 +321,10 @@
       <div class="container">
         <div class="screen-plans-head">
           <div class="h3 screen-plans-title">
-            Планы
+            ИДЕИ ДЛЯ ОТКРЫТИЯ НОВОГО
           </div>
           <div class="screen-plans-search">
-            <input type="search" placeholder="Найти план: Введите email">
+            <input type="search" placeholder="Найти свою идею: Введите email">
             <button class="cross visible">
               <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M9.375 2.625L2.625 9.375" stroke="white" stroke-width="2" stroke-linecap="round"
@@ -381,7 +379,7 @@
                 </div>
                 <a class="screen-plans-item__more mfp-link" href="javascript:void(0)"
                   data-href="./popups/popup-plane.html">
-                  Читать весь план
+                  Читать полностью
                 </a>
               </div>
             </div>
@@ -409,7 +407,7 @@
                 </div>
                 <a class="screen-plans-item__more mfp-link" href="javascript:void(0)"
                   data-href="./popups/popup-plane.html">
-                  Читать весь план
+                  Читать полностью
                 </a>
               </div>
             </div>
@@ -437,7 +435,7 @@
                 </div>
                 <a class="screen-plans-item__more mfp-link" href="javascript:void(0)"
                   data-href="./popups/popup-plane.html">
-                  Читать весь план
+                  Читать полностью
                 </a>
               </div>
             </div>
@@ -465,7 +463,7 @@
                 </div>
                 <a class="screen-plans-item__more mfp-link" href="javascript:void(0)"
                   data-href="./popups/popup-plane.html">
-                  Читать весь план
+                  Читать полностью
                 </a>
               </div>
             </div>
@@ -493,7 +491,7 @@
                 </div>
                 <a class="screen-plans-item__more mfp-link" href="javascript:void(0)"
                   data-href="./popups/popup-plane.html">
-                  Читать весь план
+                  Читать полностью
                 </a>
               </div>
             </div>
@@ -521,7 +519,7 @@
                 </div>
                 <a class="screen-plans-item__more mfp-link" href="javascript:void(0)"
                   data-href="./popups/popup-plane.html">
-                  Читать весь план
+                  Читать полностью
                 </a>
               </div>
             </div>
@@ -549,7 +547,7 @@
                 </div>
                 <a class="screen-plans-item__more mfp-link" href="javascript:void(0)"
                   data-href="./popups/popup-plane.html">
-                  Читать весь план
+                  Читать полностью
                 </a>
               </div>
             </div>
@@ -577,7 +575,7 @@
                 </div>
                 <a class="screen-plans-item__more mfp-link" href="javascript:void(0)"
                   data-href="./popups/popup-plane.html">
-                  Читать весь план
+                  Читать полностью
                 </a>
               </div>
             </div>
@@ -613,7 +611,7 @@
                   <path d="M8 16H12" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                     stroke-linejoin="round" />
                 </svg>
-                Создать свой план
+                Поделиться своей идеей
               </button>
             </div>
             <div class="pagination__arrows">
@@ -633,15 +631,15 @@
       <div class="container">
         <form class="contest-form">
           <div class="h2">
-            Расскажи о своем плане на лето и испытай удачу
+            Расскажи, что нового ты хотел бы для себя открыть и стань участником розыгрыша
           </div>
           <div class="screen-contest-form-left">
             <div class="ui-field">
-              <input class="ui-input" type="text" placeholder="Как вас зовут ?" required name="contest_first_name"
+              <input class="ui-input" type="text" placeholder="Ввести имя" required name="contest_first_name"
                 id="contest_first_name">
             </div>
             <div class="ui-field">
-              <input class="ui-input" type="text" placeholder="Ваша фамилия?" required name="contest_last_name"
+              <input class="ui-input" type="text" placeholder="Ввести фамилию" required name="contest_last_name"
                 id="contest_last_name">
             </div>
             <div class="ui-field">
@@ -651,8 +649,8 @@
           </div>
           <div class="screen-contest-form-right">
             <div class="ui-field">
-              <textarea class="ui-textarea" placeholder="Расскажите о том как хотите провести своё лето?" required
-                name="contest_text" id="contest_text"></textarea>
+              <textarea class="ui-textarea" placeholder="Расскажите о своей идее" required name="contest_text"
+                id="contest_text"></textarea>
             </div>
           </div>
           <div class="screen-contest-form-bottom">
