--- a/public/contest.html
+++ b/public/contest.html
@@ -726,6 +726,7 @@
             <a href="#">
               Согласие на обработку персональных данных
             </a>
+            <div class="dot"></div>
             <a href="#">
               Условия конкурса
             </a>
