--- a/public/index.html
+++ b/public/index.html
@@ -184,20 +184,18 @@
       <div class="container">
         <div class="contest-content">
           <div class="h3 screen-about-contest__title">
-            Поделись своими планами
-            и получи возможность
-            выиграть приз!
+            Расскажи, к каким новым открытиям ты готов и получи возможность выиграть приз от "Белого Медведя"
           </div>
           <div class="screen-about-contest__period">
             С 1 июля по 30 сентября
           </div>
           <div class="screen-about-contest__text">
             <p>
-              Каждые 2 недели будут выбираться три самых интересных и ярких плана на лето.
+              Каждые 2 недели будут выбираться три самых интересных и ярких идеи для открытия нового.
             </p>
             <p>
-              Авторы самых креативных историй получат ценные призы от бренда «Белый Медведь», которые сделают лето еще
-              более захватывающим!
+              Авторы самых креативных идей получат ценные призы от бренда «Белый Медведь», которые вдохновят на
+              воплощение идей в жизнь.
             </p>
           </div>
         </div>
